--- a/resources/scss/config/_typography.scss
+++ b/resources/scss/config/_typography.scss
@@ -1,4 +1,4 @@
-$font-family: "MuseoSansCyrl", fantasy;
+$font-family: "MuseoSansCyrl", sans-serif;
 $icon-font: "Font Awesome 5 Pro";
 
 $font-scale: 1;
