--- a/resources/scss/blocks/_mobl-menu.scss
+++ b/resources/scss/blocks/_mobl-menu.scss
@@ -1,13 +1,13 @@
 .mobl-menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 3;
-    background-color: #fff;
-    max-width: 280px;
-    width: 100%;
-    box-shadow: 4px 0 4px rgba(0, 0, 0, 0.15);
-    overflow: hidden;
+    //position: absolute;
+    //top: 0;
+    //left: 0;
+    //z-index: 3;
+    //background-color: #fff;
+    //max-width: 280px;
+    //width: 100%;
+    //box-shadow: 4px 0 4px rgba(0, 0, 0, 0.15);
+    //overflow: hidden;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -60,22 +60,35 @@
     &__item {
         position: relative;
 
-        &.arrow {
+        .arrow {
+            position: absolute;
+            top: 0;
+            right: 0;
+            z-index: 1;
+            width: 36px;
+            height: 36px;
+            line-height: 36px;
+            text-align: center;
+
             &::after {
                 content: "\f105";
                 font-family: $icon-font;
                 font-size: 22px;
                 color: $breadcrumbs-color;
-                position: absolute;
                 display: block;
-                top: 3px;
-                right: $padding;
                 transition: transform $transition;
+                will-change: transform;
             }
 
             &--open {
                 &::after {
                     transform: rotate(90deg);
+                }
+
+                & + .mobl-menu__drop-menu {
+                    height: auto;
+                    border-top: 1px solid $content-bg-color;
+                    border-bottom: 1px solid $content-bg-color;
                 }
             }
         }
@@ -96,9 +109,9 @@
 
     &__drop-menu {
         padding: 0;
-        border-top: 1px solid $content-bg-color;
-        border-bottom: 1px solid $content-bg-color;
         width: 100%;
+        height: 0;
+        overflow: hidden;
     }
 
     &__drop-menu__link {
@@ -111,5 +124,7 @@
         flex-direction: column;
         margin: 0 auto;
         font-size: 17px;
+        align-items: center;
+        padding-bottom: $padding;
     }
 }
