--- a/resources/scss/blocks/_article-prew.scss
+++ b/resources/scss/blocks/_article-prew.scss
@@ -1,6 +1,6 @@
 .article-prew {
     display: flex;
-    align-items: center;
+    //align-items: center;
     max-width: 100%;
 
     @include media-max($small) {
