--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8802,6 +8802,7 @@ readers do not read off random characters that represent icons */
   height: 48px;
   font-weight: 500;
   font-size: 16px;
+  padding: 13px 16px;
 }
 .text-block tbody td {
   padding: 13px 16px;
