--- a/resources/admin/scss/app.scss
+++ b/resources/admin/scss/app.scss
@@ -142,6 +142,7 @@ $font-path: "/fonts";
         height: 48px;
         font-weight: 500;
         font-size: $font-size;
+        padding: $padding - 3px $padding;
     }
 
     tbody td {
