--- a/resources/admin/scss/app.scss
+++ b/resources/admin/scss/app.scss
@@ -49,7 +49,7 @@ $font-path: "/fonts";
     margin-bottom: $padding * 1.5;
 }
 
-.fr-view {
+body .fr-view {
     font-family: $font-family;
     font-size: rem(17px);
     line-height: em(24px, 17px);
