Added froala styles to blocks

--- a/public/admin-dist/css/app.css
+++ b/public/admin-dist/css/app.css
@@ -117,20 +117,20 @@ body .fr-view hr {
   height: 1px;
   margin: 32px 0;
 }
-body .fr-view table th {
-  background-color: #ebf9fa;
+body .fr-view table thead th {
+  font-weight: 700;
+  font-size: 14px;
+  padding: 10.6666666667px 16px;
+  text-transform: uppercase;
+  background-color: #fefbf2;
+  color: #906f0a;
+  border-bottom: 2px solid #F2C94C;
 }
 body .fr-view table td, body .fr-view table th {
   border: none;
 }
-body .fr-view thead th {
-  height: 48px;
-  font-weight: 500;
-  font-size: 16px;
-  padding: 13px 16px;
-}
 body .fr-view tbody td {
-  padding: 13px 16px;
+  padding: 10.6666666667px 16px;
   border-bottom: 1px solid #dbe7f3;
 }
 body .fr-view li + li {
