--- a/resources/scss/blocks/_carousel.scss
+++ b/resources/scss/blocks/_carousel.scss
@@ -18,12 +18,12 @@
         display: flex;
         justify-content: center;
         margin-right: 1rem;
-        width: 100%; 
+        width: 100%;
     }
 
     &__image {
         max-height: 100%;
-        max-width: 100%;
+        max-width: 770px;
         //opacity: 0;
         //transition: opacity $transition;
 
@@ -40,103 +40,117 @@
     }
 }
 
-.flickity-button {
-    background-color: transparent;
-    border-radius: 0;
-    outline: none;
-    text-decoration: none;
-    background-repeat: no-repeat;
-
-    &:hover {
-        background-color: transparent;
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: center;
-        outline: none;
-        text-decoration: none;
-    }
-}
-
-.flickity-prev-next-button {
-    padding: 0;
-    width: 36px;
-    height: 34px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    display: flex;
-    transition: opacity $transition;
-
-    @include media-max(425px) {
-        display: none;
-    }
-
-    &:focus {
-        opacity: 1;
-        box-shadow: none;
-    }
-
-     &:after {
-        content: '\f054';
+body .owl-carousel {
+    .owl-nav {
         position: absolute;
-        display: inline-block;
-        color: #fff;
-        font-family: $icon-font;
-        font-size: rem(21px);
-        font-weight: 700;
-        transition: transform $transition;
-    }
+        top: 50%;
+        margin-top: -18px;
+        width: 100%;
 
-    &.previous {
-        background-image: url('../img/icons/Arrow-left.svg');
-        left: -5px;
+        .owl-prev, .owl-next {
+            background-color: transparent;
+            border-radius: 0;
+            outline: none;
+            text-decoration: none;
+            background-repeat: no-repeat;
 
-        &:after {
-            margin-left: 10px;
-            top: 1px;
-            transform: rotate(180deg);
+            &:hover {
+                background-color: transparent;
+                background-repeat: no-repeat;
+                background-size: contain;
+                background-position: center;
+                outline: none;
+                text-decoration: none;
+            }
         }
 
-        &:hover::after  {
-            top: 1px;
-            transform: rotate(180deg) translateX(5px);
+        .owl-prev, .owl-next {
+            padding: 0;
+            width: 36px;
+            height: 34px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            display: flex;
+            transition: opacity $transition;
+            position: absolute;
+
+            @include media-max(425px) {
+                display: none;
+            }
+
+            &:focus {
+                opacity: 1;
+                box-shadow: none;
+            }
+
+            &:after {
+                content: '\f054';
+                position: absolute;
+                display: inline-block;
+                color: #fff;
+                font-family: $icon-font;
+                font-size: rem(21px);
+                font-weight: 700;
+                transition: transform $transition;
+            }
         }
-    }
 
-    &.next {
-        background-image: url('../img/icons/Arrow-right.svg');
-        right: -5px;
 
-        &:after {
-            top: 2px;
-            margin-left: 15px;
+        .owl-prev {
+            background-image: url($img-path + '/icons/Arrow-left.svg');
+            left: -5px;
+
+            &:after {
+                margin-left: 10px;
+                top: 1px;
+                transform: rotate(180deg);
+            }
+
+            &:hover::after {
+                top: 1px;
+                transform: rotate(180deg) translateX(5px);
+            }
         }
 
-        &:hover::after  {
-            transform: translateX(4px);
-        }
-    }
+        .owl-next {
+            background-image: url($img-path + '/icons/Arrow-right.svg');
+            right: -5px;
 
-    .flickity-button-icon {
-        display: none;
+            &:after {
+                top: 2px;
+                margin-left: 15px;
+            }
+
+            &:hover::after {
+                transform: translateX(4px);
+            }
+        }
     }
 }
 
-.flickity-page-dots {
-    bottom: 25px;
+body .owl-carousel {
+    .owl-dots {
+        bottom: 25px + 12px;
+        position: absolute;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        height: 0;
 
-    .dot {
-        background-color: transparent;
-        width: 12px;
-        height: 12px;
-        border-radius: 50%;
-        border: 2px solid #fff;
-        opacity: 1;
-        margin: 0 $padding / 4;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        .owl-dot {
+            background-color: transparent;
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            border: 2px solid #fff;
+            opacity: 1;
+            margin: 0 $padding / 4;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-        &.is-selected {
-            background-color: #fff;
+            &.active {
+                background-color: #fff;
+            }
         }
     }
 }
@@ -148,7 +162,7 @@
     }
 }
 
-.flickity-enabled {
+.owl-loaded {
     & > .carousel__cell:not(:first-child) {
         display: block;
     }
