--- a/resources/scss/blocks/_comments.scss
+++ b/resources/scss/blocks/_comments.scss
@@ -209,6 +209,10 @@
         .input-field {
             margin-bottom: $padding;
             max-width: 50%;
+
+            @include media-max($xx-small) {
+                max-width: 100%;
+            }
         }
     }
 }
